# Indiestudio

./: CMakeLists.txt  mapbomberman.txt  powerup_ghost.mtl  powerup_more.mtl  powerup_range.mtl  powerup_speed.mtl  powerup_spike.mtl  trueshroom.mtl  uploads_files_3387574_bush.mtl  wiz.iqm  wizanim.iqm
lib/: bombermanbombs.hpp
src/: bombermanbombs.cpp  bombermanplayer.cpp  menu.cpp
